--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://qiuwanlin.github.io/try-todo/build",
   "dependencies": {
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
